infra/k8s/manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: v1
kind: Namespace
metadata:
  name: kong
---
apiVersion: v1
kind: Namespace
metadata:
  name: __ARGOCD_NAMESPACE__
---
apiVersion: v1
kind: Namespace
metadata:
  name: __K8S_NAMESPACE__
